# generateur_de_phrase

./: .gitignore  CMakeLists.txt  Git.txt  README.md  flech.c  flech.h  generator.c  generator.h  main.c  read.c  read.h  tree.c  tree.h  tree_research.c  tree_research.h
